refactor: getFirst() -> get(0) since school pcs suck